# PaperPilot

./: .env.example  .gitignore  README.md  README_FOR_PPT.md  pyproject.toml
docs/: demo_script.md  presentation_brief.md  presentation_qna.md  presentation_speaker_notes.md
outputs/dllm_unlearning_0.85_30d/: 2026-06-10_dllm_unlearning.md  2026-06-10_dllm_unlearning_log.md
outputs/rag_0.35/: 2026-06-10_rag.md  2026-06-10_rag_log.md
outputs/rag_0.85/: 2026-06-10_rag.md  2026-06-10_rag_log.md
paper/: main.tex  outline.md  paper.md  references.bib
src/paperpilot/: __init__.py  evaluation.py  main.py  models.py  publisher.py  workflow.py
src/paperpilot/agents/: __init__.py  policy.py  query_planner.py  reviewer.py  searcher.py  summarizer.py
src/paperpilot/tools/: __init__.py  arxiv.py  openalex.py  pdf.py  semantic_scholar.py
tests/: conftest.py  test_arxiv.py  test_cli.py  test_evaluation.py  test_openalex.py  test_pdf.py  test_publisher.py  test_query_planner.py  test_reviewer.py  test_searcher.py  test_semantic_scholar.py  test_summarizer.py  test_workflow.py
