[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "paperpilot"
version = "0.1.0"
description = "Agentic paper curation workflow for recent arXiv papers."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "PaperPilot" }]
dependencies = ["openai>=2", "pypdf>=5"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
paperpilot = "paperpilot.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
